<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.10</version>
        <relativePath/>
    </parent>

    <groupId>community.flock.examples.axon.webshop</groupId>
    <artifactId>parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>api</module>
        <module>app</module>
        <module>domain</module>
        <module>spi</module>
    </modules>

    <properties>
        <axon-extensions.version>4.12.0</axon-extensions.version>
        <axon.version>4.9.3</axon.version>
        <java.version>21</java.version>
        <kmongo.version>5.6.0</kmongo.version>
        <kotest.version>6.2.5</kotest.version>
        <kotlin.version>2.4.20</kotlin.version>
        <ktlint.version>1.8.0</ktlint.version>
        <revision>0.0.1-SNAPSHOT</revision>
        <testcontainers.version>2.0.5</testcontainers.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>community.flock.examples.axon.webshop</groupId>
                <artifactId>api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.axonframework</groupId>
                <artifactId>axon-spring-boot-starter</artifactId>
                <version>${axon.version}</version>
            </dependency>
            <dependency>
                <groupId>org.axonframework</groupId>
                <artifactId>axon-server-connector</artifactId>
                <version>${axon.version}</version>
            </dependency>
            <dependency>
                <groupId>org.litote.kmongo</groupId>
                <artifactId>kmongo-coroutine</artifactId>
                <version>${kmongo.version}</version>
            </dependency>
            <dependency>
                <groupId>org.axonframework.extensions.reactor</groupId>
                <artifactId>axon-reactor-spring-boot-starter</artifactId>
                <version>${axon-extensions.version}</version>
            </dependency>
            <dependency>
                <groupId>org.axonframework.extensions.kotlin</groupId>
                <artifactId>axon-kotlin</artifactId>
                <version>${axon-extensions.version}</version>
            </dependency>
            <dependency>
                <groupId>org.axonframework</groupId>
                <artifactId>axon-test</artifactId>
                <version>${axon.version}</version>
            </dependency>
            <dependency>
                <groupId>io.kotest</groupId>
                <artifactId>kotest-assertions-core-jvm</artifactId>
                <version>${kotest.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-mongodb</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-postgresql</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-junit-jupiter</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <extensions>true</extensions>
                    <configuration>
                        <args>
                            <arg>-Xjsr305=strict</arg>
                        </args>
                        <compilerPlugins>
                            <plugin>spring</plugin>
                        </compilerPlugins>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-allopen</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>com.github.ekryd.sortpom</groupId>
                    <artifactId>sortpom-maven-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <predefinedSortOrder>custom_1</predefinedSortOrder>
                        <lineSeparator>\n</lineSeparator>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <sortProperties>true</sortProperties>
                        <sortDependencies>scope</sortDependencies>
                        <nrOfIndentSpace>4</nrOfIndentSpace>
                        <expandEmptyElements>false</expandEmptyElements>
                        <createBackupFile>false</createBackupFile>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>sort</goal>
                            </goals>
                            <phase>verify</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>${maven-antrun-plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.pinterest.ktlint</groupId>
                            <artifactId>ktlint-cli</artifactId>
                            <version>${ktlint.version}</version>
                        </dependency>
                        <!-- additional 3rd party ruleset(s) can be specified here -->
                    </dependencies>
                    <executions>
                        <execution>
                            <id>ktlint-format</id>
                            <goals>
                                <goal>run</goal>
                            </goals>
                            <configuration>
                                <target name="ktlint">
                                    <java classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath" dir="${basedir}" failonerror="true" fork="true" taskname="ktlint">
                                        <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
                                        <arg value="-F"/>
                                        <arg value="src/**/*.kt"/>
                                    </java>
                                </target>
                            </configuration>
                        </execution>
                        <execution>
                            <id>ktlint</id>
                            <goals>
                                <goal>run</goal>
                            </goals>
                            <phase>verify</phase>
                            <configuration>
                                <target name="ktlint">
                                    <java classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath" dir="${basedir}" failonerror="true" fork="true" taskname="ktlint">
                                        <arg value="src/**/*.kt"/>
                                    </java>
                                </target>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.github.ekryd.sortpom</groupId>
                <artifactId>sortpom-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>${maven-antrun-plugin.version}</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>format</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-antrun-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>ktlint-format</id>
                                    <phase>validate</phase>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>

</project>
